--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-if": "^2.0.1",
+    "gulp-inject-string": "^1.1.0",
     "gulp-plumber": "^1.1.0",
     "gulp-pug": "^3.0.4",
     "gulp-rename": "^1.2.2",
