--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "build": "gulp build"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
-    "@angular/http": "^2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
-    "@angular/router": "^3.0.0-rc.2",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
     "bootstrap": "^4.0.0-alpha.4",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
@@ -33,9 +33,9 @@
     "ng2-nvd3": "^1.1.3",
     "ng2-popover": "^0.0.8",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.11",
+    "rxjs": "^5.0.0-beta.12",
     "systemjs": "^0.19.37",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.6.23"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
