Update development environment
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "noFallthroughCasesInSwitch": false,
-    "noExternalResolve": false,
+    "noResolve": false,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitUseStrict": false,
