--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "build": "gulp build"
   },
   "dependencies": {
-    "@angular/common": "^2.0.0",
-    "@angular/compiler": "^2.0.0",
-    "@angular/core": "^2.0.0",
-    "@angular/forms": "^2.0.0",
-    "@angular/http": "^2.0.0",
-    "@angular/platform-browser": "^2.0.0",
-    "@angular/platform-browser-dynamic": "^2.0.0",
-    "@angular/router": "^3.0.0",
-    "bootstrap": "^4.0.0-alpha.4",
+    "@angular/common": "^2.1.0",
+    "@angular/compiler": "^2.1.0",
+    "@angular/core": "^2.1.0",
+    "@angular/forms": "^2.1.0",
+    "@angular/http": "^2.1.0",
+    "@angular/platform-browser": "^2.1.0",
+    "@angular/platform-browser-dynamic": "^2.1.0",
+    "@angular/router": "^3.1.0",
+    "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
     "font-awesome": "^4.6.3",
@@ -31,29 +31,25 @@
     "moment": "^2.14.1",
     "ng2-bootstrap": "^1.1.1",
     "ng2-nvd3": "^1.1.3",
-    "ng2-popover": "^0.0.8",
+    "ng2-popover": "^0.0.11",
     "reflect-metadata": "^0.1.8",
     "rxjs": "^5.0.0-beta.12",
     "systemjs": "^0.19.37",
-    "zone.js": "^0.6.23"
+    "zone.js": "^0.6.26"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-if": "^2.0.1",
     "gulp-inject-string": "^1.1.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-pug": "^3.0.4",
-    "gulp-rename": "^1.2.2",
+    "gulp-pug": "^3.1.0",
     "gulp-sass": "^2.3.2",
-    "gulp-server-livereload": "^1.8.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.6",
+    "gulp-server-livereload": "=1.8.4",
+    "gulp-sourcemaps": "^2.1.1",
+    "gulp-typescript": "^3.0.2",
     "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "systemjs-builder": "^0.15.30",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2"
+    "systemjs-builder": "^0.15.32",
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
