Add license information
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "CAOS frontend",
   "author": "Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>",
   "version": "0.0.1",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": ""
