--- a/package.json
+++ b/package.json
@@ -9,48 +9,50 @@
     "url": ""
   },
   "scripts": {
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
     "dev": "gulp dev",
     "build": "gulp build"
   },
   "dependencies": {
-    "@angular/common": "^2.1.0",
-    "@angular/compiler": "^2.1.0",
-    "@angular/core": "^2.1.0",
-    "@angular/forms": "^2.1.0",
-    "@angular/http": "^2.1.0",
-    "@angular/platform-browser": "^2.1.0",
-    "@angular/platform-browser-dynamic": "^2.1.0",
-    "@angular/router": "^3.1.0",
-    "bootstrap": "4.0.0-alpha.5",
+    "@angular/animations": "^4.1.2",
+    "@angular/common": "^4.1.2",
+    "@angular/compiler": "^4.1.2",
+    "@angular/core": "^4.1.2",
+    "@angular/forms": "^4.1.2",
+    "@angular/http": "^4.1.2",
+    "@angular/platform-browser": "^4.1.2",
+    "@angular/platform-browser-dynamic": "^4.1.2",
+    "@angular/router": "^4.1.2",
+    "bootstrap": "^v4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
-    "font-awesome": "^4.6.3",
-    "lodash": "^4.14.1",
-    "moment": "^2.17.0",
-    "ng2-bootstrap": "^1.1.16",
+    "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "ng2-nvd3": "^1.1.3",
-    "ng2-popover": "^0.0.12",
-    "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.12",
-    "systemjs": "^0.19.37",
-    "zone.js": "^0.6.26"
+    "ngx-bootstrap": "^1.6.6",
+    "primeng": "^4.0.0",
+    "reflect-metadata": "^0.1.10",
+    "rxjs": "^5.4.0",
+    "systemjs": "=0.19.37",
+    "zone.js": "^0.8.10"
   },
   "devDependencies": {
+    "@types/core-js": "0.9.35",
+    "@types/d3": "3.5.17",
+    "@types/nvd3": "^1.8.37",
+    "@types/zone.js": "^0.5.12",
     "gulp": "^3.9.1",
-    "gulp-debug": "^2.1.2",
-    "gulp-if": "^2.0.1",
+    "gulp-debug": "^3.1.0",
+    "gulp-if": "^2.0.2",
     "gulp-inject-string": "^1.1.0",
-    "gulp-pug": "^3.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-server-livereload": "=1.8.4",
-    "gulp-sourcemaps": "^2.1.1",
-    "gulp-typescript": "^3.0.2",
-    "gulp-uglify": "^2.0.0",
-    "systemjs-builder": "^0.15.32",
-    "typescript": "^2.0.3",
-    "typings": "^1.4.0"
+    "gulp-ngc": "^0.3.0",
+    "gulp-pug": "^3.2.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-server-livereload": "^1.9.2",
+    "gulp-sourcemaps": "^2.4.1",
+    "gulp-typescript": "^3.1.5",
+    "gulp-uglify": "^2.0.1",
+    "systemjs-builder": "=0.15.32",
+    "typescript": "^2.1.6"
   }
 }
