--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "build": "gulp build"
   },
   "dependencies": {
-    "@angular/animations": "^4.1.2",
-    "@angular/common": "^4.1.2",
-    "@angular/compiler": "^4.1.2",
-    "@angular/core": "^4.1.2",
-    "@angular/forms": "^4.1.2",
-    "@angular/http": "^4.1.2",
-    "@angular/platform-browser": "^4.1.2",
-    "@angular/platform-browser-dynamic": "^4.1.2",
-    "@angular/router": "^4.1.2",
+    "@angular/animations": "^4.3.3",
+    "@angular/common": "^4.3.3",
+    "@angular/compiler": "^4.3.3",
+    "@angular/core": "^4.3.3",
+    "@angular/forms": "^4.3.3",
+    "@angular/http": "^4.3.3",
+    "@angular/platform-browser": "^4.3.3",
+    "@angular/platform-browser-dynamic": "^4.3.3",
+    "@angular/router": "^4.3.3",
     "bootstrap": "^v4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
@@ -29,30 +29,30 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "ng2-nvd3": "^1.1.3",
-    "ngx-bootstrap": "^1.6.6",
-    "primeng": "^4.0.0",
+    "ngx-bootstrap": "^1.8.1",
+    "primeng": "^4.1.2",
     "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.0",
     "systemjs": "=0.19.37",
-    "zone.js": "^0.8.10"
+    "rxjs": "^5.4.2",
+    "zone.js": "^0.8.16"
   },
   "devDependencies": {
-    "@types/core-js": "0.9.35",
-    "@types/d3": "3.5.17",
+    "@types/core-js": "^0.9.42",
+    "@types/d3": "^3.5.38",
     "@types/nvd3": "^1.8.37",
     "@types/zone.js": "^0.5.12",
     "gulp": "^3.9.1",
     "gulp-debug": "^3.1.0",
     "gulp-if": "^2.0.2",
     "gulp-inject-string": "^1.1.0",
-    "gulp-ngc": "^0.3.0",
+    "gulp-ngc": "^0.3.2",
     "gulp-pug": "^3.2.0",
     "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
     "gulp-sourcemaps": "^2.4.1",
-    "gulp-typescript": "^3.1.5",
-    "gulp-uglify": "^2.0.1",
     "systemjs-builder": "=0.15.32",
-    "typescript": "^2.1.6"
+    "gulp-typescript": "^3.2.1",
+    "gulp-uglify": "^3.0.0",
+    "typescript": "^2.4.2"
   }
 }
