--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "lib": [ "dom", "dom.iterable", "es2015", "es2015.iterable" ],
     "module": "system",
     "moduleResolution": "node",
     "diagnostics": true,
