--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "ngx-bootstrap": "^1.8.1",
     "primeng": "^4.1.2",
     "reflect-metadata": "^0.1.10",
-    "systemjs": "=0.19.37",
     "rxjs": "^5.4.2",
+    "systemjs": "=0.19.37",
     "zone.js": "^0.8.16"
   },
   "devDependencies": {
@@ -50,9 +50,11 @@
     "gulp-sass": "^3.1.0",
     "gulp-server-livereload": "^1.9.2",
     "gulp-sourcemaps": "^2.4.1",
-    "systemjs-builder": "=0.15.32",
+    "gulp-tslint": "^8.1.2",
     "gulp-typescript": "^3.2.1",
     "gulp-uglify": "^3.0.0",
+    "systemjs-builder": "=0.15.32",
+    "tslint": "^5.6.0",
     "typescript": "^2.4.2"
   }
 }
