[docker] Fix nginx configuration
Signed-off-by: Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>

--- a/env.js.template
+++ b/env.js.template
@@ -25,5 +25,5 @@ var CaosSettings = {
   LOCALE: 'it-IT',
 
   // CAOS API url
-  CAOS_API_URL: '${CAOS_DASHBOARD_BASE}/api/v1'
+  CAOS_API_URL: '${CAOS_DASHBOARD_BASE_TSDB_API}/v1'
 };
