--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -28,7 +28,7 @@ http {
     listen 80;
     server_name localhost;
 
-    location /api/ {
+    location ${CAOS_DASHBOARD_BASE_TSDB_API}/ {
       # proxy_set_header X-Real-IP $remote_addr;
       # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       # proxy_set_header X-NginX-Proxy true;
@@ -37,14 +37,14 @@ http {
       proxy_pass http://${CAOS_DASHBOARD_TSDB_HOST}:${CAOS_DASHBOARD_TSDB_PORT}/api/;
     }
 
-    location / {
-      root /caos_dashboard;
+    location /${CAOS_DASHBOARD_BASE_NAME} {
+      alias /caos-dashboard/;
 
       expires -1;
       add_header Pragma "no-cache";
       add_header Cache-Control "no-store, no-cache, must-revalidate, post-check=0, pre-check=0";
 
-      try_files $uri$args $uri /index.html =404;
+      try_files $uri $uri/ index.html =404;
     }
   }
 }
