--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "d3": "^3.5.17",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
+    "mathjs": "^3.16.3",
     "moment": "^2.17.1",
     "ng2-nvd3": "^1.1.3",
     "ngx-bootstrap": "^1.8.1",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/core-js": "^0.9.42",
     "@types/d3": "^3.5.38",
+    "@types/mathjs": "^0.0.35",
     "@types/nvd3": "^1.8.37",
     "@types/zone.js": "^0.5.12",
     "gulp": "^3.9.1",
