--- a/env.js.template
+++ b/env.js.template
@@ -24,6 +24,8 @@
 var CaosSettings = {
   LOCALE: 'it-IT',
 
+  CAOS_SITE_NAME: '${CAOS_DASHBOARD_SITE_NAME}',
+
   // CAOS API url
   CAOS_API_URL: '${CAOS_DASHBOARD_BASE_TSDB_API}/v1'
 };
