--- a/package.json
+++ b/package.json
@@ -4,58 +4,60 @@
   "author": "Fabrizio Chiarello <fabrizio.chiarello@pd.infn.it>",
   "version": "0.0.5",
   "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
   "scripts": {
-    "dev": "gulp dev",
-    "build": "gulp build"
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
+  "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.3",
-    "@angular/common": "^4.3.3",
-    "@angular/compiler": "^4.3.3",
-    "@angular/core": "^4.3.3",
-    "@angular/forms": "^4.3.3",
-    "@angular/http": "^4.3.3",
-    "@angular/platform-browser": "^4.3.3",
-    "@angular/platform-browser-dynamic": "^4.3.3",
-    "@angular/router": "^4.3.3",
-    "bootstrap": "^v4.0.0-alpha.6",
+    "@angular/animations": "^5.0.0",
+    "@angular/common": "^5.0.0",
+    "@angular/compiler": "^5.0.0",
+    "@angular/core": "^5.0.0",
+    "@angular/forms": "^5.0.0",
+    "@angular/http": "^5.0.0",
+    "@angular/platform-browser": "^5.0.0",
+    "@angular/platform-browser-dynamic": "^5.0.0",
+    "@angular/router": "^5.0.0",
+    "bootstrap": "4.0.0-beta.2",
     "core-js": "^2.4.1",
     "d3": "^3.5.17",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
-    "mathjs": "^3.16.3",
-    "moment": "^2.17.1",
-    "ng2-nvd3": "^1.1.3",
-    "ngx-bootstrap": "^1.8.1",
-    "primeng": "^4.1.2",
-    "reflect-metadata": "^0.1.10",
-    "rxjs": "^5.4.2",
-    "systemjs": "=0.19.37",
-    "zone.js": "^0.8.16"
+    "mathjs": "^3.17.0",
+    "moment": "^2.19.2",
+    "ng2-nvd3": "^2.0.0",
+    "ngx-bootstrap": "^2.0.0-beta.8",
+    "primeng": "^5.0.0",
+    "rxjs": "^5.5.2",
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.42",
+    "@angular/cli": "1.5.3",
+    "@angular/compiler-cli": "^5.0.0",
+    "@angular/language-service": "^5.0.0",
     "@types/d3": "^3.5.38",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
     "@types/mathjs": "^0.0.35",
-    "@types/nvd3": "^1.8.37",
-    "@types/zone.js": "^0.5.12",
-    "gulp": "^3.9.1",
-    "gulp-debug": "^3.1.0",
-    "gulp-if": "^2.0.2",
-    "gulp-inject-string": "^1.1.0",
-    "gulp-ngc": "^0.3.2",
-    "gulp-sass": "^3.1.0",
-    "gulp-server-livereload": "^1.9.2",
-    "gulp-sourcemaps": "^2.4.1",
-    "gulp-tslint": "^8.1.2",
-    "gulp-typescript": "^3.2.1",
-    "gulp-uglify": "^3.0.0",
-    "systemjs-builder": "=0.15.32",
-    "tslint": "^5.6.0",
-    "typescript": "^2.4.2"
+    "@types/node": "~6.0.60",
+    "@types/nvd3": "^1.8.38",
+    "codelyzer": "~3.2.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.7.0",
+    "typescript": "~2.4.2"
   }
 }
