--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -4,7 +4,10 @@
     "outDir": "../out-tsc/app",
     "baseUrl": "./",
     "module": "es2015",
-    "types": []
+    "types": [
+      "d3",
+      "nvd3"
+    ]
   },
   "exclude": [
     "test.ts",
