--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -32,9 +32,10 @@ http {
     resolver 127.0.0.11;
 
     # Storing the proxied upstream in a variable forces nginx to always resolve it through the resolver
-    set $backend_upstream "http://${CAOS_DASHBOARD_TSDB_HOST}:${CAOS_DASHBOARD_TSDB_PORT}/api/";
+    set $backend_upstream "http://${CAOS_DASHBOARD_TSDB_HOST}:${CAOS_DASHBOARD_TSDB_PORT}";
 
     location ${CAOS_DASHBOARD_BASE_TSDB_API}/ {
+      rewrite ^/${CAOS_DASHBOARD_BASE_NAME}/(.*) /$1 break;
       proxy_pass $backend_upstream;
 
       proxy_set_header Host $host;
