--- a/package.json
+++ b/package.json
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.0",
-    "@angular/common": "^5.0.0",
-    "@angular/compiler": "^5.0.0",
-    "@angular/core": "^5.0.0",
-    "@angular/forms": "^5.0.0",
-    "@angular/http": "^5.0.0",
-    "@angular/platform-browser": "^5.0.0",
-    "@angular/platform-browser-dynamic": "^5.0.0",
-    "@angular/router": "^5.0.0",
-    "bootstrap": "4.0.0-beta.2",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^5.2.6",
+    "@angular/common": "^5.2.6",
+    "@angular/compiler": "^5.2.6",
+    "@angular/core": "^5.2.6",
+    "@angular/forms": "^5.2.6",
+    "@angular/http": "^5.2.6",
+    "@angular/platform-browser": "^5.2.6",
+    "@angular/platform-browser-dynamic": "^5.2.6",
+    "@angular/router": "^5.2.6",
+    "bootstrap": "4.0.0",
+    "core-js": "^2.5.3",
     "d3": "^3.5.17",
     "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4",
-    "mathjs": "^3.17.0",
-    "moment": "^2.19.2",
+    "lodash": "^4.17.5",
+    "mathjs": "^3.20.2",
+    "moment": "^2.20.1",
     "ng2-nvd3": "^2.0.0",
-    "ngx-bootstrap": "^2.0.0-beta.8",
-    "primeng": "^5.0.0",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "ngx-bootstrap": "^2.0.2",
+    "primeng": "^5.2.0",
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.3",
-    "@angular/compiler-cli": "^5.0.0",
-    "@angular/language-service": "^5.0.0",
-    "@types/d3": "^3.5.38",
+    "@angular/cli": "1.7.1",
+    "@angular/compiler-cli": "^5.2.6",
+    "@angular/language-service": "^5.2.6",
+    "@types/d3": "^3.5.40",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/mathjs": "^0.0.35",
-    "@types/node": "~6.0.60",
+    "@types/mathjs": "^0.0.37",
+    "@types/node": "~9.4.6",
     "@types/nvd3": "^1.8.38",
     "codelyzer": "~3.2.0",
     "jasmine-core": "~2.6.2",
@@ -56,8 +56,8 @@
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
-    "typescript": "~2.4.2"
+    "ts-node": "~5.0.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   }
 }
